changed sign up and login to links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1>eastFood</h1>
       </div>
       <div class="rt">
-        <h3>Sign Up</h3>
-        <h3>Login</h3>
+        <a href=""><h3>Sign Up</h3></a>
+        <a href=""><h3>Login</h3></a>
       </div>
     </nav>
 
